# remat

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  static.yml
cmake/tpl/: SetupTPL.cmake
examples/: Dual.h  Dual.h~  Makefile  Rational.h  arch.bak  arch.dxf  bouncing_ball.py  buckling_arch.py  contact.py  create_mesh2d.py  create_mesh3d.py  double_pendulum.py  half_space.py  impact_test.py  interactive.py  platform.bak  potential_well.py  seismic_wave.py  test_Dual  test_Fixed  test_Fixed.cpp~  test_Rational  types.h  viscoplastic_truss.py
examples/bouncing_ball/: bouncing_ball.py
examples/bouncing_ball-web/: FaceSet.py  NodeSet.py  Part.py  __init__.py  libREMAT.dylib  problem.pkl
examples/bouncing_point/: bouncing_point.py
examples/buckling_arch/: buckling_arch.py
examples/buckling_arch-web/: MeshUtils.py  REMAT.py  problem.pkl
examples/contact/: contact.py
examples/contact-web/: Material.py  libREMAT.wasm  problem.pkl
examples/dissipative_wave/: dissipative_wave.py
examples/dissipative_wave-web/: Animation.py  frame_maker_file_io.py  libREMAT.dylib
src/: CMakeLists.txt  ContactInteraction.h  Dual.h  Element.h  Fixed.h  Integrator.h  Material.h  Matrix.h  Parameters.h  REMAT.py  REMAT_API.cpp  Rational.h  SignedFixed.h  System.h  Truss.h  UniaxialMaterial.h  UniaxialViscoplasticity.h  ViscoElasticity.h  ViscoPlasticity.h  arithmetic.h  test_Dual.cpp  test_Fixed.cpp  test_Rational.cpp  types.h
src/MeshUtils/: Geometry.py  GeometryFactory.py  Model.py  Selector.py  frame_maker_file_io.py
tests/: CMakeLists.txt  test_Dual.cpp  test_Fixed.cpp  test_Integrator.cpp  test_Matrix.cpp  test_Matrix.m  test_Rational.cpp  test_System.cpp  test_UniaxialViscoplasticity.cpp
(+47 files in other folders)
